[package]
name = "ckb-contract-debugger"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
autobins = false

[dependencies]
clap = { version = "2" }
ckb-core = { path = "ckb/core" }
ckb-protocol = { path = "ckb/protocol" }
ckb-vm = { path = "vm" }
flatbuffers = "0.5.0"
serde_json = "1.0"

[[bin]]
name ="debugger"
path = "src/main.rs"

[[bin]]
name ="builder"
path = "src/builder.rs"
