[package]
name = "ckb-contract-debugger"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
autobins = false

[dependencies]
bigint = { git = "https://github.com/nervosnetwork/bigint" }
clap = { version = "2" }
ckb-core = { path = "ckb/core" }
ckb-script = { path = "ckb/script" }
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name ="debugger"
path = "src/main.rs"
